--- a/sass/style.scss
+++ b/sass/style.scss
@@ -103,14 +103,14 @@ p {
   background-size: cover;
   .headerContent {
     padding: 20px;
-    h1 {
-      font-size: 60px;
+    h3 {
+      font-size: 50px;
       margin-top: 100px;
       margin-bottom: 10px;
       color: $white;
     }
     h5 {
-      font-size: 40px;
+      font-size: 20px;
       color: $white;
       margin-top: 5px;
       margin-bottom: 40px;
@@ -121,6 +121,7 @@ p {
       border-radius: 30px;
       padding: 13px 7px;
       max-width: 180px;
+      height: 48px;
       display: block;
       color: $white;
       display: block;
