--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,20 +1,88 @@
-@font-face { font-family: 'proxima_novalight_italic'; src: url("../fonts/proxima_nova_light_it-webfont.eot"); src: url("../fonts/proxima_nova_light_it-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_light_it-webfont.woff") format("woff"), url("../fonts/proxima_nova_light_it-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_light_it-webfont.svg#proxima_novalight_italic") format("svg"); font-weight: normal; font-style: normal; }
+@font-face {
+  font-family: 'proxima_novalight_italic';
+  src: url("../fonts/proxima_nova_light_it-webfont.eot");
+  src: url("../fonts/proxima_nova_light_it-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_light_it-webfont.woff") format("woff"), url("../fonts/proxima_nova_light_it-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_light_it-webfont.svg#proxima_novalight_italic") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
-@font-face { font-family: 'proxima_novalight'; src: url("../fonts/proxima_nova_light-webfont.eot"); src: url("../fonts/proxima_nova_light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_light-webfont.woff") format("woff"), url("../fonts/proxima_nova_light-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_light-webfont.svg#proxima_novalight") format("svg"); font-weight: normal; font-style: normal; }
+@font-face {
+  font-family: 'proxima_novalight';
+  src: url("../fonts/proxima_nova_light-webfont.eot");
+  src: url("../fonts/proxima_nova_light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_light-webfont.woff") format("woff"), url("../fonts/proxima_nova_light-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_light-webfont.svg#proxima_novalight") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
-@font-face { font-family: 'proxima_novaregular_italic'; src: url("../fonts/proxima_nova_reg_it-webfont.eot"); src: url("../fonts/proxima_nova_reg_it-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_reg_it-webfont.woff") format("woff"), url("../fonts/proxima_nova_reg_it-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_reg_it-webfont.svg#proxima_novaregular_italic") format("svg"); font-weight: normal; font-style: normal; }
+@font-face {
+  font-family: 'proxima_novaregular_italic';
+  src: url("../fonts/proxima_nova_reg_it-webfont.eot");
+  src: url("../fonts/proxima_nova_reg_it-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_reg_it-webfont.woff") format("woff"), url("../fonts/proxima_nova_reg_it-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_reg_it-webfont.svg#proxima_novaregular_italic") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
-@font-face { font-family: 'proxima_nova_rgregular'; src: url("../fonts/proxima_nova_reg-webfont.eot"); src: url("../fonts/proxima_nova_reg-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_reg-webfont.woff") format("woff"), url("../fonts/proxima_nova_reg-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_reg-webfont.svg#proxima_nova_rgregular") format("svg"); font-weight: normal; font-style: normal; }
+@font-face {
+  font-family: 'proxima_nova_rgregular';
+  src: url("../fonts/proxima_nova_reg-webfont.eot");
+  src: url("../fonts/proxima_nova_reg-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_reg-webfont.woff") format("woff"), url("../fonts/proxima_nova_reg-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_reg-webfont.svg#proxima_nova_rgregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
-@font-face { font-family: 'proxima_novasemibold_italic'; src: url("../fonts/proxima_nova_sbold_it-webfont.eot"); src: url("../fonts/proxima_nova_sbold_it-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_sbold_it-webfont.woff") format("woff"), url("../fonts/proxima_nova_sbold_it-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_sbold_it-webfont.svg#proxima_novasemibold_italic") format("svg"); font-weight: normal; font-style: normal; }
+@font-face {
+  font-family: 'proxima_novasemibold_italic';
+  src: url("../fonts/proxima_nova_sbold_it-webfont.eot");
+  src: url("../fonts/proxima_nova_sbold_it-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_sbold_it-webfont.woff") format("woff"), url("../fonts/proxima_nova_sbold_it-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_sbold_it-webfont.svg#proxima_novasemibold_italic") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
-@font-face { font-family: 'proxima_novasemibold'; src: url("../fonts/proxima_nova_sbold-webfont.eot"); src: url("../fonts/proxima_nova_sbold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_sbold-webfont.woff") format("woff"), url("../fonts/proxima_nova_sbold-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_sbold-webfont.svg#proxima_novasemibold") format("svg"); font-weight: normal; font-style: normal; }
+@font-face {
+  font-family: 'proxima_novasemibold';
+  src: url("../fonts/proxima_nova_sbold-webfont.eot");
+  src: url("../fonts/proxima_nova_sbold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/proxima_nova_sbold-webfont.woff") format("woff"), url("../fonts/proxima_nova_sbold-webfont.ttf") format("truetype"), url("../fonts/proxima_nova_sbold-webfont.svg#proxima_novasemibold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 
-@media screen and (max-width: 767px) { #header { background: url(../images/header_bg2_placeholder.png) no-repeat 72% center #00051d; height: 700px; background-size: 300%; }
-  #header nav li { margin-top: 2px; padding: 5px; text-align: right; }
-  #header .headerContent { text-align: center; }
-  #header .headerContent h1 { font-size: 50px; margin-top: 60px; }
-  #header .headerContent h5 { font-size: 24px; }
-  #header .headerContent .learnMore { margin-left: 22px; }
-  .aboutUs { background: url(../images/aboutUs_bg.png) no-repeat 63% center #f2f3f6; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
-  .ourPartners { background: url(../images/partners_bg.png) no-repeat 42% center #2e3192; background-size: 110%; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; } }
+@media screen and (max-width: 767px) {
+  #header {
+    background: url(../images/header_bg2_placeholder.png) no-repeat 72% center #00051d;
+    height: 700px;
+    background-size: 300%;
+  }
+  #header nav li {
+    margin-top: 2px;
+    padding: 5px;
+    text-align: right;
+  }
+  #header .headerContent {
+    text-align: center;
+  }
+  #header .headerContent h1 {
+    font-size: 50px;
+    margin-top: 60px;
+  }
+  #header .headerContent h5 {
+    font-size: 24px;
+  }
+  #header .headerContent .learnMore {
+    margin-left: 22px;
+  }
+  .aboutUs {
+    background: url(../images/aboutUs_bg.png) no-repeat 63% center #f2f3f6;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .ourPartners {
+    background: url(../images/partners_bg.png) no-repeat 42% center #2e3192;
+    background-size: 110%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+}
